--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 input.txt
-input_test.txt
+input_test*.txt
 
 build/
 # If you prefer the allow list template instead of the deny list, see community template:
